# e-foto

./: .bash_history  .gitattributes  .gitignore  CMakeLists.txt  README.md  config.cmake  e-foto.pro  efoto-2023_06.deb  efoto.astylerc  fotogrametria_digital.pro
.subversion/: config
2.0/EfotoMDI/: AbstractForm.h  EfotoMDI.cpp  EfotoMDIForm.ui  SensorLayout.ui  SigmaForm.cpp  SigmaForm.h
Dms/: DegreeLineEdit.cpp  DegreeLineEdit.h  DegreeMain.cpp  Dms.cpp  Dms.h  DmsEdit.cpp  DmsEdit.h  DmsEdit.pro  mainDmsEdit.cpp  moc_DegreeLineEdit.cpp  tester.cpp  tester.h
Documented_FD2SD&NextTrunk_mergeDirectory/UnitTests/: infrastructureC.pro  infrastructureMain.cpp  photogrammetryMain.cpp
EDU/trunk/: e-foto.pro
EfotoMDI/: EfotoMDI.h  EfotoMDI.pro  FlightLayout.ui  HeaderForm.cpp  HeaderForm.h  SensorForm.h  mdiMain.cpp
Image_Matching/: DemFeatures.cpp  DemFeatures.h  ImageMatching.cpp  ImageMatching.h  Interpolation.h  LeastSquaresMatching.cpp  LeastSquaresMatching.h  MatchingPoints.cpp  MatchingPoints.h  Orthorectification.h  RadiometricTransformation.cpp  flood_fill_stack.cpp  floodfill.pro  mytest.cpp  test_demfeat.cpp  test_matching_points.cpp  teste.pro  teste_demfeat.pro  teste_image_matching.cpp  teste_inter_grid.cpp  teste_matching_points.cpp  teste_ncc.cpp  teste_ortho.pro  teste_radiometric.cpp  teste_radiometric_images.cpp
Image_Matching/docs/: DemFeatures.odt  DemGrid.odt  DemManager.odt  ImageMatching.odt  Interpolation.odt  LeastSquaresMatching.odt  MatchingPoints.odt  MatchingPointsGrid.odt  NormalizedCrossCorelation.odt  OrthoManager.odt  RadiometricTransformation.odt
ProjP/: ConversionsLayout.cpp  ConvertionsForm.ui  ConvertionsSystems.cpp  ConvertionsSystems.h  DegreeMain.cpp  Dms.cpp  Dms.h  DmsEdit.cpp  DmsEdit.h  EObject.cpp  RectSupport.h
ProjP/convertDatums e UTM/: ConvertionLayout.cpp  ConvertionLayout.h  ConvertionsForm.ui  ConvertionsSystems.cpp  ConvertionsSystems.h  Dms.cpp  Dms.h  DmsEdit.cpp  DmsEdit.h  GenericSystemDialog.cpp  GenericSystemDialog.h  GenericSystemDialog.ui  PositionMatrix.cpp
TableIOEOWidget/: EDom.h  TableIOEOWidget.cpp  TableIOEOWidget.pro  tableMain.cpp
br.uerj.eng.efoto/: synapse.xml
br.uerj.eng.efoto/src/: AbstractAnalogCoordinate.h  EFotoManager.cpp  EFotoManager.h  IOManager.cpp  IOManager.h  IOUserInterface.h  IOUserInterface_Qt.h  LoadingScreen.cpp  Photogrammetry.h  ProjectManager.cpp  ProjectManager.h  ProjectUserInterface.h  ProjectUserInterface_Qt.h  SRManager.cpp  SRManager.h  SRUserInterface.h  STile.h  SpatialRessection.cpp
br.uerj.eng.efoto/ui/: SRForm.ui  SensorLayout.ui
branches/clean-code/: e-foto.pro
branches/e-foto-code-qt5-c++17/: Makefile  e-foto.pro
branches/e-foto-trunk-candidate/: e-foto.pro
branches/translation/: e-foto.pro
c/control/: DEMManager.cpp  DEMManager.h  EFotoManager.cpp  EFotoManager.h  IOManager.cpp  IOManager.h  OrthoManager.cpp  OrthoManager.h  PTManager.cpp  PTManager.h  ProjectManager.cpp  ProjectManager.h  ReportManager.cpp  ReportManager.h  SPManager.cpp  SPManager.h  SRManager.cpp  SRManager.h
c/imageProcessing/: ImageMatching.cpp  ImageMatching.h  Interpolation.cpp  Interpolation.h  LeastSquaresMatching.cpp  LeastSquaresMatching.h  NormalizedCrossCorrelation.cpp  NormalizedCrossCorrelation.h  RadiometricTransformation.cpp  RadiometricTransformation.h
c/infrastructure/: AbstractDetectorCoordinate.cpp  AbstractDetectorCoordinate.h  AbstractImageCoordinate.cpp  AbstractImageCoordinate.h  CommonDef.h  ConvertionsSystems.cpp  ConvertionsSystems.h  Coordinate.cpp  Coordinate.h  Dms.cpp  Dms.h  EDom.cpp  EDom.h  EDomValidator.cpp  EDomValidator.h  ETreeModel.cpp  ETreeModel.h  GeoSystem.cpp  GeoSystem.h  Matrix.cpp  Matrix.h  PositionMatrix.cpp  PositionMatrix.h  SparseMatrix.cpp  SparseMatrix.h  TreeFeatures.cpp  revision_info_template.h.in
c/interface/: IOUserInterface.h  OrthoUserInterface.h  PTUserInterface.h  ProjectUserInterface.cpp  ReportUserInterface.h
c/photogrammetry/: BundleAdjustment.cpp  BundleAdjustment.h  DemFeatures.cpp  DemFeatures.h  DemGrid.cpp  DemGrid.h  DetectorFiducialMark.cpp  DetectorFiducialMark.h  Dummies.cpp  (+56 more)
control/: EFotoManager.cpp  EFotoManager.h  ProjectManager.cpp  ProjectManager.h  SRManager.cpp
data/: br.uerj.eng.efoto.desktop  br.uerj.eng.efoto.metainfo.xml  e-foto-mimeinfo.xml
db/: uuid
doc/: 134648.bodies  134776  134776.bodies  135032.bodies  135288  135288.bodies  135416  135416.bodies  135544  135544.bodies  135672  135800.bodies  135928  135928.bodies  136056  136056.bodies  136312  136440.bodies  136568  136696  136824.bodies  137080  137080.bodies  137208.bodies  137848.bodies  138104.bodies  138360.bodies  138488.bodies  138616.bodies  139000.bodies  139128.bodies  139256.bodies  139384.bodies  139512.bodies  139640.bodies  140792.bodies  140920.bodies  141048.bodies  141176.bodies  141688.bodies  (+17 more)
e-foto/: .clang-format  e-foto.pro
infrastructure/: AbstractAnalogCoordinate.h  AbstractDigitalCoordinate.h  Coordinate.h  EDom.h  EDomValidator.cpp  EObject.h  ETreeModel.cpp  Matrix.cpp
language/: e-foto_pt_BR.ts
package_projects/: readme.md
photogrammetry/: Aerial.cpp  Aerial.h  AnalogFiductialMark.h  CheckingPoint.cpp  CheckingPoint.h  ControlPoint.cpp  ControlPoint.h  DigitalFiductialMark.h  Flight.cpp  Flight.h  Image.cpp  Image.h  PhotogrammetricPoint.h  Point.cpp  Point.h  ProjectHeader.h  Sensor.h  Terrain.h
stereoPlotterProject/: e-foto.pro  testMain.cpp  testTable.cpp
stereodisplay/: AbstractDisplay.cpp  AbstractDisplay.h  Geometry.cpp  Geometry.h  RasterResource.cpp  RasterResource.h  StereoDisplay.cpp  StereoDisplay.h  StereoService.cpp  StereoService.h  TestWindow.cpp  TestWindow.h  View.cpp  View.h  main.cpp  stereodisplay.pro
synapses/: cortex_pt_BR.qm  synapses.pro
trunk/: e-foto.pro
trunk_Matching/: New_classes.txt  e-foto.pro
trunk_Novas_OI_e_OE_Novo_XML/: e-foto.pro
trunk_PT/: e-foto_PT.pro
trunk_candidata/: e-foto.pro
trunk_com_feixes_perspectivos/: e-foto.pro
trunk_com_mods_em_io_e_eo/: e-foto.pro
trunk_reformulada/: e-foto.pro
trunk_with_corrections/: e-foto.pro
(+2345 files in other folders)
